--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
-dependencies = []
+dependencies = [
+    "basedpyright>=1.37.4",
+    "ruff>=0.15.0",
+    "ruff-lsp>=0.0.62",
+]
